--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-heroku = "*"
 gunicorn = "*"
 djangorestframework = "*"
 graphene-django = "*"
+django-rest-auth = "*"
 
 [requires]
 python_version = "3.7"
