Initila work on autopilot feature

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_CONFIGURATION=MySettings
+DJANGO_SETTINGS_MODULE=toolsbackbone.settings
 python_files = tests.py test_*.py *_tests.py
